added dummy data, updated routes and modified the swagger doc
